nm just added gitignore..now added scrollbar and fixed at typo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/slnx.sqlite
+/.vs/HumanFactorsProj1/v15/.suo
